Small fixes across components
• Remove external links icon when images are the main link target
• Add space between heading and content inside cards
• Remove interior flex item for buttons
• Add extra space before an accordion

--- a/ecms_base/themes/custom/ecms/assets/patterns/00-atoms/06-buttons/_00-buttons.scss
+++ b/ecms_base/themes/custom/ecms/assets/patterns/00-atoms/06-buttons/_00-buttons.scss
@@ -164,10 +164,6 @@ button,
     }
   }
 
-  > span {
-    flex: inherit;
-  }
-
   &:disabled,
   &--disabled {
     @include button-disabled-style;
